add new entity - Equipment